--- a/home.html
+++ b/home.html
@@ -340,12 +340,9 @@
                 </div>
             </div>
             <!--? End: Section_Three  -->
-
-            <div class="timer">
-				<label>Time</label>
-				<label id="minutes">00</label>:<label id="seconds">00</label>
-			</div>
-
+        </div>
+        <div class="timer">
+            <p id="timer">Timer: 00:00:00</p>
         </div>
         <!--? End: Section_Two  -->
         <!-- ------------------Welcome------------------------------ -->
