--- a/text.html
+++ b/text.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
+        body {
             margin: 0;
             min-height: 100vh;
             display: grid;
             place-content: center;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-optical-sizing: auto;
-            background-color: #f9f6ef;            
+            background-color: #f9f6ef;
         }
-        h1{
+
+        h1 {
             text-decoration: underline 1px #9997;
             font-weight: 900;
             font-size: 6.5vw;
@@ -23,8 +25,10 @@
             --as: calc(.5lh - (1cap - 1ex));
             -webkit-box-reflect: below calc(-1 * var(--as)) linear-gradient(#0000 50%, #0009);
         }
-        h1::before,h1::after{
-            --tm:2s;
+
+        h1::before,
+        h1::after {
+            --tm: 2s;
             position: absolute;
             inset: 0;
             content: attr(data-val);
@@ -32,36 +36,94 @@
             opacity: 0;
             animation: show var(--tm) linear alternate infinite;
         }
-        h1::before{
+
+        h1::before {
             z-index: 1;
             background-color: linear-gradient(in hsl longer hue 45deg, #f66 0 0);
             background-clip: text;
             -webkit-background-clip: text;
         }
-        h1::after{
+
+        h1::after {
             animation-delay: calc(var(--tm)/4);
             z-index: 2;
             background: linear-gradient(in hsl longer hue -45deg, #f66 0 0);
             background-clip: text;
             -webkit-background-clip: text;
         }
-        @keyframes show{
-            to {opacity: 1;}
+
+        @keyframes show {
+            to {
+                opacity: 1;
+            }
         }
-        @keyframes smush{
-            from{
+
+        @keyframes smush {
+            from {
                 font-variation-settings: "wdth" 75;
             }
-            to{
+
+            to {
                 font-variation-settings: "wdth" 150;
             }
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1 id="header" data-val="Learning Axis"> Learning Axis</h1>
     </header>
-    
+    <button id="clickButton">Click Me!</button>
+    <p id="timer">Timer: 00:00:00</p>
+
+
+    <script>
+        let hours = 0,
+            minutes = 0,
+            seconds = 0;
+
+        // Function to update the timer
+        function updateTimer() {
+            // Increment the seconds
+            seconds++;
+            // Adjust minutes and seconds
+            if (seconds === 60) {
+                seconds = 0;
+                minutes++;
+            }
+            if (minutes === 60) {
+                minutes = 0;
+                hours++;
+            }
+
+            // Format the time
+            const formattedTime = `${pad(hours)}:${pad(minutes)}:${pad(seconds)}`;
+            // Update the timer display
+            document.getElementById('timer').textContent = `Timer: ${formattedTime}`;
+        }
+
+        // Function to pad single digit numbers with leading zeros
+        function pad(num) {
+            return num.toString().padStart(2, '0');
+        }
+
+        // Attach click event listener to the button
+        document.getElementById('clickButton').addEventListener('click', () => {
+            // Start the timer
+            const timerInterval = setInterval(() => {
+                updateTimer();
+            }, 1000);
+
+            // Stop the timer after 1 hour (3600 seconds)
+            setTimeout(() => {
+                clearInterval(timerInterval);
+                alert('Timer stopped after 1 hour!');
+            }, 3600000); // 1 hour = 3600 seconds * 1000 (milliseconds)
+        });
+    </script>
+
+
 </body>
+
 </html>
